--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<head>
 		urb">
         		<h1>Hi there, I'm Steven Candia!</h1>
-				<p>I'm a student at Academy For Software Engineering.<em>I'm learning the basics right now.</em>is this right?<a href="/about">Read more about my life...</a></p>
+				<p>I'm a student at Academy For Software Engineering,<em>I'm learning the basics right now</em>is this right?<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
