--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<head>
 		urb">
         		<h1>Hi there, I'm Steven Candia!</h1>
-				<p>I'm a student at Academy For Software Engineering,<em> I'm learning the basics right now.</em> So far I know how to create a file, edit it, etc.<a href="/about">I hope to learn more and do much more.</a></p>
+				<p>I'm a student at Academy For Software Engineering,<em> I'm learning the basics right now.</em> <a href="/about">I hope to learn more and do much more.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
