--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<head>
 		urb">
         		<h1>Hi there, I'm Steven Candia!</h1>
-				<p>I'm a student at Academy For Software Engineering,<em> I'm learning the basics right now.</em> 
+				<p>I'm a student at Academy For Software Engineering,</em> I'm learning the basics right now.</em> 
 					It was a bit confusing at first glance, but with re-reading more carefully Im able to understand it better.<a href="/about">I hope to 
 					learn more and do much more.</a></p>
     		</div><!-- /.blurb -->
