--- a/index.html
+++ b/index.html
@@ -1,35 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title> Steven Candia</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="bl<!DOCTYPE html>
-<html>
-	<head>
-		urb">
-        		<h1>Hi there, I'm Steven Candia!</h1>
-				<p>I'm a student at Academy For Software Engineering,</em> I'm learning the basics right now.</em> 
-					It was a bit confusing at first glance, but with re-reading more carefully Im able to understand it better.<a href="/about">I hope to 
-					learn more and do much more.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/stevencandia">github.com/stevencandia</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Steven Candia
+---
+<div class="blurb">
+	<h1>Hi there, I'm Steven Candia!</h1>
+	<p>I'm a student at Academy For Software Engineering,<em>I'm trying to get used all this since it's kinda confusing.
+		</em><a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
