--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Steven Candia
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Steven Candia!</h1>
-	<p>I'm a student at Academy For Software Engineering,<em>I'm trying to get used all this since it's kinda confusing.
+	<p>I'm a student at Academy For Software Engineering,<em>I'm trying to get used all this since it's kinda confusing and a bit hard.
 		</em><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
