--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,3 @@
 <title>About Me<title>
 Hi O_o
-	I was born the 11th of Frebuary. 
+	I was born the 11th of Frebuary. I have an older brother, Cristian, and a younger brother, Jacob. 
