--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-title: About me
+<title>About me<title> 
 ---
 Hi O_o
 	I was born the 11th of Frebuary. I have an older brother, Cristian, and a younger brother, Jacob. 
